--- a/数据结构/树/2024-11-26-计算二叉树的叶子.md
+++ b/数据结构/树/2024-11-26-计算二叉树的叶子.md
@@ -10,7 +10,7 @@ int calculateLeaf(BiTree tree) {
         return 1;
     } else {
         return 	calculateLeaf(tree->lchild) +
-            	calucalateLeaf(tree->rchild);
+            	calculateLeaf(tree->rchild);
     }
 }
 ```
